finish initial state

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -17,7 +18,12 @@
   <div class="search-bar">
     <input type="text" placeholder="Search for a movie"><button>Search</button>
   </div>
-  <main></main>
+  <main>
+    <span class="start">
+      <i class="fa-solid fa-film"></i>
+      <h3>Start exploring</h3>
+    </span>
+  </main>
   
 </body>
 </html>
