--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
     <h2>My Watchlist</h2>
   </header>
   <div class="search-bar">
-    <input type="text" placeholder="Search for a movie"><button>Search</button>
+    <input type="text" placeholder="Search for a movie"><button id="search-movie">Search</button>
   </div>
   <main>
     <span class="start">
       <i class="fa-solid fa-film"></i>
       <h3>Start exploring</h3>
     </span>
+    <div class="movie">
+      <img src="" alt="">
+      <div>
+
+      </div>
+    </div>
   </main>
-  
+  <script src="index.js"></script>
 </body>
 </html>
